--- a/userenv/Cargo.toml
+++ b/userenv/Cargo.toml
@@ -14,3 +14,7 @@ path = "src/hello_world.rs"
 [[bin]]
 name = "loop10"
 path = "src/loop10.rs"
+
+[[bin]]
+name = "get_pid"
+path = "src/get_pid.rs"
