--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,18 @@ overflow-check = true
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[features]
+default = ["user_log", "print_lock", "pcb"]
+print_lock = []
+syscall = []
+scheduler = []
+hart = []
+pgtbl = []
+kalloc = []
+pcb = []
+user_log = []
+
+
 [dependencies]
 riscv = { git = "https://github.com/rcore-os/riscv", features = ["inline-asm"] }
 lazy_static = {version = "1.4.0", features = ["spin_no_std"]}
