--- a/userenv/Cargo.toml
+++ b/userenv/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+bitflags = "1.2.1"
 
 [[bin]]
 name = "hello_world"
@@ -26,3 +27,7 @@ path = "src/sys_wait4.rs"
 [[bin]]
 name = "sys_brk"
 path = "src/sys_brk.rs"
+
+[[bin]]
+name = "sys_kill"
+path = "src/sys_kill.rs"
