--- a/userenv/Cargo.toml
+++ b/userenv/Cargo.toml
@@ -39,3 +39,7 @@ path = "src/forkboom.rs"
 [[bin]]
 name = "signal_chld"
 path = "src/signal_chld.rs"
+
+[[bin]]
+name = "times"
+path = "src/times.rs"
