--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,7 @@ overflow-check = true
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [features]
-default = ["multicore", "input_echo", "init_clock", "user_log", "print_lock", "pcb", "syscall"]
+default = ["multicore", "input_echo", "init_clock", "user_log", "print_lock", "pcb"]
 
 board_unleashed = []    # 使用unleashed开发板
 init_clock = ["board_unleashed"]    # 配置系统时钟，使用1G Hz
@@ -31,6 +31,7 @@ pgtbl = []
 kalloc = []
 pcb = []
 signal = []
+vfs = []
 
 
 [dependencies]
