--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,7 @@ overflow-check = true
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [features]
-default = ["multicore", "input_echo", "init_clock", "user_log", "print_lock", "pcb"]
+default = ["multicore", "input_echo", "init_clock", "user_log", "print_lock", "pcb", "vfs", "pipe"]
 
 board_unleashed = []    # 使用unleashed开发板
 init_clock = ["board_unleashed"]    # 配置系统时钟，使用1G Hz
@@ -32,6 +32,7 @@ kalloc = []
 pcb = []
 signal = []
 vfs = []
+pipe = []
 
 
 [dependencies]
