--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,7 @@ read_buffer = []    # read调用使用缓存区
 input_echo  = []    # 输入回显示
 multicore   = []    # 开启多核
 batch = ["pcb"] # 默认会运行一个shell，在shell中输入程序名运行，batch会指定运行一系列特定的程序，方便调试多核(src/user/mod.rs)
+gitee_test = [] # 加载gitee的测试程序
 
 # 下面的选项用于调试内核模块的输出
 user_log = []     # 打印用户态程序输出
