--- a/.cargo/config
+++ b/.cargo/config
@@ -1,7 +1,12 @@
 [build]
-target = "riscv64gc-unknown-none-elf"
+target = "riscv64imac-unknown-none-elf"
 
 [target.riscv64gc-unknown-none-elf]
+rustflags = [
+    "-Clink-arg=-Tlinker.ld", "-Cforce-frame-pointers=yes"
+]
+
+[target.riscv64imac-unknown-none-elf]
 rustflags = [
     "-Clink-arg=-Tlinker.ld", "-Cforce-frame-pointers=yes"
 ]
