Add: more print

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,8 +26,9 @@ shutdown_when_no_pcb = []
 memfs = []
 
 # 下面的选项用于调试内核模块的输出
-kernel_log = ["pcb", "path_resolve", "pipe", "vfs", "execve", "hart", "sd", "syscall", "scheduler", "kalloc", "vfs", "trap", "vm"] 
+kernel_log = ["pcb", "path_resolve", "pipe", "vfs", "execve", "hart", "sd", "syscall", "scheduler", "kalloc", "vfs", "trap", "vm", "time", "pgtbl"] 
 print_lock = []   # 使用互斥锁防止多核打印格式混乱
+time = []
 sd = []
 syscall = []
 trap = []
