--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,7 @@ overflow-check = true
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [features]
-default = ["load_contest_test", "FCFS", "shutdown_when_no_pcb", "kernel_log"]
+default = ["load_contest_test", "FCFS", "shutdown_when_no_pcb", "sd"]
 board_unleashed = []    # 使用unleashed开发板
 init_clock = ["board_unleashed"]    # 配置系统时钟，使用1G Hz
 read_buffer = []    # read调用使用缓存区
