--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,22 +12,23 @@ overflow-check = true
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [features]
-default = ["load_contest_test", "FCFS", "shutdown_when_no_pcb", "sd", "memfs", "vfs", "execve", "syscall", "trap", "no_user_output"]
+default = ["load_contest_test", "FCFS", "shutdown_when_no_pcb", "memfs", "kernel_log"]
 board_unleashed = []    # 使用unleashed开发板
 init_clock = ["board_unleashed"]    # 配置系统时钟，使用1G Hz
 read_buffer = []    # read调用使用缓存区
-input_echo  = []    # 输入回显示
+input_echo  = []    # 输入回显
 multicore   = []    # 开启多核
 batch = []          # 默认会运行一个shell，在shell中输入程序名运行，batch会指定运行一系列特定的程序，方便调试多核(src/user/mod.rs)
-FCFS = []           # 优先调度先来的进程，用于gitee调试时查看结果
+FCFS = []           # 优先调度先来的进程，用于调试时查看结果
 load_contest_test = []
 load_shell = []
 shutdown_when_no_pcb = []
-memfs = []
-no_user_output = []
+memfs = []           # 使用memfs
+fat32 = []           # 使用fat32
+no_user_output = []  # 不打印用户态输出
 
 # 下面的选项用于调试内核模块的输出
-kernel_log = ["pcb", "path_resolve", "pipe", "vfs", "execve", "hart", "sd", "scheduler", "vfs", "trap", "vm", "time"] 
+kernel_log = ["pcb", "path_resolve", "pipe", "vfs", "execve", "hart", "sd", "scheduler", "trap", "vm"] 
 print_lock = []   # 使用互斥锁防止多核打印格式混乱
 time = []
 sd = []
